# backend/congress_api/models/bill_content_diff_list.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from congress_api.models.base_model_ import Model
+from congress_api import util
+
+from congress_api.models.bill_content_diff import BillContentDiff  # noqa: E501
+
+class BillContentDiffList(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, legislation_version_id=None, diffs=None):  # noqa: E501
+        """BillContentDiffList - a model defined in OpenAPI
+
+        :param legislation_version_id: The legislation_version_id of this BillContentDiffList.  # noqa: E501
+        :type legislation_version_id: str
+        :param : The  of this BillContentDiffList.  # noqa: E501
+        :type : str
+        """
+        self.openapi_types = {
+            'legislation_version_id': str,
+            'diffs': List[BillContentDiff]
+        }
+
+        self.attribute_map = {
+            'legislation_version_id': 'legislation_version_id',
+            'diffs': 'diffs'
+        }
+
+        self._legislation_version_id = legislation_version_id
+        self._diffs = diffs
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BillContentDiffList':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The BillContentDiffList of this BillContentDiffList.  # noqa: E501
+        :rtype: BillContentDiffList
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def legislation_version_id(self):
+        """Gets the legislation_version_id of this BillContentDiffList.
+
+
+        :return: The legislation_version_id of this BillContentDiffList.
+        :rtype: str
+        """
+        return self._legislation_version_id
+
+    @legislation_version_id.setter
+    def legislation_version_id(self, legislation_version_id):
+        """Sets the legislation_version_id of this BillContentDiffList.
+
+
+        :param legislation_version_id: The legislation_version_id of this BillContentDiffList.
+        :type legislation_version_id: str
+        """
+
+        self._legislation_version_id = legislation_version_id
+
+    @property
+    def diffs(self):
+        """Gets the  of this BillContentDiffList.
+
+
+        :return: The  of this BillContentDiffList.
+        :rtype: str
+        """
+        return self._diffs
+
+    @diffs.setter
+    def diffs(self, diffs):
+        """Sets the  of this BillContentDiffList.
+
+
+        :param : The  of this BillContentDiffList.
+        :type : str
+        """
+
+        self._diffs = diffs
